--- a/page-2/package.json
+++ b/page-2/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.3.2",
     "vue-routers": "^1.0.9",
+    "vue3-toastify": "^0.2.1",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
